fix project stucture to follow maven structure