@@ -5,7 +5,6 @@ import id.ihaesge.scraper.core.*;
 import java.time.*;
 import java.time.format.*;
 import java.util.*;
-import java.util.regex.*;
 
 import org.jsoup.*;
 import org.jsoup.nodes.*;
@@ -123,7 +122,7 @@ public class Bisnis extends BaseScraper implements NewsSource {
         if (meta != null) {
             String publishDate = cleanText(meta.attr("content"));
 
-        	DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm:ss", Locale.of("id", "ID"));
+        	DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm:ss", new Locale("id", "ID"));
         	LocalDateTime ldt = LocalDateTime.parse(publishDate, formatter);
 
         	return ldt;
@@ -132,15 +131,15 @@ public class Bisnis extends BaseScraper implements NewsSource {
         return null;
     }
 
-    private void removeNoiseBisnis(Document doc) {
-        String[] selectors = {
-                ".skyscrapper", ".bisnisaiHeader", ".bisnisaiBody", ".bisnisaiFooter", ".baca-juga-box", ".detailsAuthor", ".billboardWrapper"
-        };
-
-        for (String sel : selectors) {
-            doc.select(sel).remove();
-        }
-    }
+//    private void removeNoiseBisnis(Document doc) {
+//        String[] selectors = {
+//                ".skyscrapper", ".bisnisaiHeader", ".bisnisaiBody", ".bisnisaiFooter", ".baca-juga-box", ".detailsAuthor", ".billboardWrapper"
+//        };
+//
+//        for (String sel : selectors) {
+//            doc.select(sel).remove();
+//        }
+//    }
 
     private String removePrefixSuffix(String str) {
     	//be careful: – is different -
