@@ -5,11 +5,9 @@ import id.ihaesge.scraper.core.*;
 import java.time.*;
 import java.time.format.*;
 import java.util.*;
-import java.util.regex.*;
 
 import org.jsoup.*;
 import org.jsoup.nodes.*;
-import org.jsoup.parser.*;
 
 import com.microsoft.playwright.*;
 
@@ -126,7 +124,7 @@ public class IPOTNews extends BaseScraper implements NewsSource {
         if (meta != null) {
             String publishDate = cleanText(meta.attr("content"));
 
-        	DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss", Locale.of("id", "ID"));
+        	DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss", new Locale("id", "ID"));
         	LocalDateTime ldt = LocalDateTime.parse(publishDate, formatter);
 
         	return ldt;
@@ -135,20 +133,20 @@ public class IPOTNews extends BaseScraper implements NewsSource {
         return null;
     }
 
-    private void removeNoiseIPOTNews(Document doc) {
-        String[] selectors = {
-        		//article list
-        		//article detail
-                "#stockInfoContainer", "#popInfoModal", "#OneClickContainer", "#lmDanaTersediaFund", "#lmDanaTersediaStock", "#lmDanaTersediaTalangan", "#lmDanaTersediaTalanganRDPU", "#lmLimitFasilitasMin", "#lmLimitFasilitasMax", "#lmDanaTersediaTalanganFasilitasFund", "lmDanaTersediaTalanganFasilitasStockMin", "#lmDanaTersediaTalanganFasilitasStockMax", "#lmDanaTersediaTalanganFasilitasStockMax",
-                //common
-                "#login_modal", "#showhidebasket", "#navnews", "#navbarIpotnews", ".sidebar.sidebar-right", 
-                "#infoLimit", "#infoOdt", "#infoMargin", "#upgradeFasilitas", "#confirmFasilitas", "#searchBarContainer"
-        };
-
-        for (String sel : selectors) {
-            doc.select(sel).remove();
-        }
-    }
+//    private void removeNoiseIPOTNews(Document doc) {
+//        String[] selectors = {
+//        		//article list
+//        		//article detail
+//                "#stockInfoContainer", "#popInfoModal", "#OneClickContainer", "#lmDanaTersediaFund", "#lmDanaTersediaStock", "#lmDanaTersediaTalangan", "#lmDanaTersediaTalanganRDPU", "#lmLimitFasilitasMin", "#lmLimitFasilitasMax", "#lmDanaTersediaTalanganFasilitasFund", "lmDanaTersediaTalanganFasilitasStockMin", "#lmDanaTersediaTalanganFasilitasStockMax", "#lmDanaTersediaTalanganFasilitasStockMax",
+//                //common
+//                "#login_modal", "#showhidebasket", "#navnews", "#navbarIpotnews", ".sidebar.sidebar-right", 
+//                "#infoLimit", "#infoOdt", "#infoMargin", "#upgradeFasilitas", "#confirmFasilitas", "#searchBarContainer"
+//        };
+//
+//        for (String sel : selectors) {
+//            doc.select(sel).remove();
+//        }
+//    }
 
     private String removePrefixSuffix(String str) {
     	//be careful: – is different -
