@@ -8,7 +8,6 @@ import org.jsoup.nodes.*;
 import java.time.*;
 import java.time.format.*;
 import java.util.*;
-import java.util.regex.*;
 
 import com.microsoft.playwright.*;
 
@@ -121,7 +120,7 @@ public class Kontan extends BaseScraper implements NewsSource {
         if (meta != null) {
             String publishDate = cleanText(meta.attr("content"));
 
-        	DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss", Locale.of("id", "ID"));
+        	DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss", new Locale("id", "ID"));
         	LocalDateTime ldt = LocalDateTime.parse(publishDate, formatter);
 
             return ldt;
@@ -145,15 +144,15 @@ public class Kontan extends BaseScraper implements NewsSource {
 //        return null;
 //    }
 
-    private void removeNoiseKontan(Document doc) {
-        String[] selectors = {
-                ".track-bacajuga-inside", ".track-gnews"
-        };
-
-        for (String sel : selectors) {
-            doc.select(sel).remove();
-        }
-    }
+//    private void removeNoiseKontan(Document doc) {
+//        String[] selectors = {
+//                ".track-bacajuga-inside", ".track-gnews"
+//        };
+//
+//        for (String sel : selectors) {
+//            doc.select(sel).remove();
+//        }
+//    }
 
     private String removePrefixSuffix(String str) {
     	//be careful: – is different -
